WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212621
MultiDeleteByOffset should not always def
https://bugs.webkit.org/show_bug.cgi?id=212621
Summary
MultiDeleteByOffset should not always def
Saam Barati
Reported
2020-06-01 17:26:43 PDT
Because it doesn't actually always def, it depends on its cases
Attachments
patch
(6.96 KB, patch)
2020-06-01 17:36 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-06-01 17:27:02 PDT
<
rdar://problem/63824182
>
Saam Barati
Comment 2
2020-06-01 17:36:13 PDT
Created
attachment 400774
[details]
patch
Saam Barati
Comment 3
2020-06-01 17:36:47 PDT
Comment on
attachment 400774
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400774&action=review
> Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:-8474 > - if (variant.newStructure()) {
this is a refactoring, since above, we have the code: if (!variant.newStructure()) continue;
Yusuke Suzuki
Comment 4
2020-06-02 09:27:53 PDT
Comment on
attachment 400774
[details]
patch r=me
EWS
Comment 5
2020-06-02 09:55:19 PDT
Committed
r262425
: <
https://trac.webkit.org/changeset/262425
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400774
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug